--- a/formulario/style/style.css
+++ b/formulario/style/style.css
@@ -1,5 +1,8 @@
+body{
+    background-color: black;
+}
 .formulario{
-    background-color:rgba(33, 53, 166, 1);
+    background-color:#2135A6;
     width: 1280px;
     height: 832px;
     margin: 0 auto;
