--- a/formulario/style/style.css
+++ b/formulario/style/style.css
@@ -10,6 +10,14 @@ nav {
     font-weight: 400;
     color: #8F8881;
 }
+.nav__ico{
+    width: 25px;
+    height: 25px;
+    display: flex;
+    margin-left: 20px;
+    margin-top: 30px;
+    gap: 5px;
+}
 
 .formulario {
     background-color: #2135A6;
@@ -20,6 +28,12 @@ nav {
     left: 712px;
     position: absolute;
 }
+.ilustracao {
+    position: absolute;
+    left: 50%;
+    top: 20%;
+}
+
 
 .upload-zone {
     width: 100%;
@@ -31,20 +45,13 @@ nav {
     justify-items: center;
     align-content: center;
     border: 1.6px dashed #00000070;
-
-
-
 }
-
-
 
 .apresentacao__formulario {
     width: 600px;
     height: 2438px;
     background: #FFFFFF;
     border: 5px solid red;
-
-
 }
 
 .inscricao {
@@ -58,8 +65,6 @@ nav {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-size: 16px;
-
-
 }
 
 .Endereco {
@@ -68,56 +73,128 @@ nav {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-size: 16px;
+    gap: 10px;
 }
-
-
-
 .Endereco__lugar {
     flex-direction: wrap;
     display: flex;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-size: 16px;
+    gap: 10px;
+}
+.rua__cidade{
+    background-color: #D6D3D1;
+    width: 100%;
+    gap: 10px;
+}
+.numero{
+    width:50%;
+}
+.estado{
+    width: 50%;
+    background-color: #D6D3D1;
 }
 
 .trilhas {
-
     width: 528px;
     display: flex;
     flex-wrap: wrap;
-    gap: 16px;
-
-
-
+    gap: 10px;
 }
 
 .trilha {
-    background-color: #D6D3D1;
+    background: #FFFFFF;
+    border: 2px solid #E7E5E4;
     width: 256px;
     height: 120px;
-    gap: 8px;
     border-radius: 8px;
     text-align: center;
+    align-items: center;  
+}
+.trilha:hover{
+    border: 2px solid #f67841;
+}
+.icones{
+    width: 40px;
+    height: 40px;
+}
+.check{
+    width: 20.5px;
+    height: 20.5px;
+    margin-left: 13px;
+    margin-top: 13px;
+    border: 1px solid #E7E5E4;
+    border-radius: 13px;
+}
+.check__icone{
+    width: 15.5px;
+    height: 15.5px;
+    align-items: center;
+    color:  #FFFFFF;
+    
+}
+.check__p__icone{
+    width: 30.5px;
+    height: 20.5px;
+    margin-left: 13px;
+    margin-top: 13px;
+    border: 1px solid #E7E5E4;
+    border-radius: 8px;
+    gap: 12px;
+
+
+}
+.check:hover{
+    background-color: #F3541C;   
+}
+.check__p__icone:hover{
+    background-color: #F3541C;   
+
 }
 
-.butoes{
+
+
+strong {
+    color: #E43A12;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+}
+.check__p{
+    display: flex;
+    gap: 15px;
+    
+}
+
+.butoes {
     padding-left: 210px;
 
 }
 
-.butao__1{
+.butao__1 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
     width: 123px;
     height: 48px;
+    color: #f67841;
+    border: 2px solid #f67841;
+    border-radius: 8px;
+
+
 }
- .butao__2{
+
+.butao__2 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
     width: 169px;
     height: 48px;
+    background: #E43A12;
+    color: #FFFFFF;
+    border-radius: 8px;
 }
-
- 
-
-
-
 
 
 P {
@@ -125,7 +202,7 @@ P {
     font-weight: 400;
     font-size: 16px;
     color: #8F8881;
-
+    
 }
 
 
@@ -136,6 +213,7 @@ form {
     height: 20px;
     color: #8F8881;
     font-size: 14px;
+    padding: 13px;
 
 
 }
@@ -151,8 +229,6 @@ h1 {
     font-weight: 600;
     font-size: 16px;
     color: #292524;
-
-
 }
 
 
@@ -162,18 +238,22 @@ input {
     width: 528px;
     height: 48px;
     border: 2px solid #D6D3D1;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    color: #8F8881;
 }
 
 input:hover {
     border: 2px solid #f67841;
 }
 
-
-img {
-    position: absolute;
-    left: 50%;
-    top: 20%;
-
-
-
+.sexo{
+    width: 100%;
+    height: 60px;
+    border: 2px solid #D6D3D1;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #8F8881;
 }
