--- a/formulario/style/style.css
+++ b/formulario/style/style.css
@@ -51,7 +51,7 @@ nav {
     width: 600px;
     height: 2438px;
     background: #FFFFFF;
-    border: 5px solid red;
+    border: 1px solid black;
 }
 
 .inscricao {
@@ -238,22 +238,32 @@ input {
     width: 528px;
     height: 48px;
     border: 2px solid #D6D3D1;
+    border-radius: 8px;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-size: 16px;
     color: #8F8881;
+    
 }
 
 input:hover {
     border: 2px solid #f67841;
+
 }
+
 
 .sexo{
     width: 100%;
     height: 60px;
     border: 2px solid #D6D3D1;
+    border-radius: 8px;
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-size: 16px;
     color: #8F8881;
+}
+
+.sexo:hover{
+    border: 2px solid #f67841;
+
 }
