--- a/formulario/style/style.css
+++ b/formulario/style/style.css
@@ -2,7 +2,10 @@
 
 
 body {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 nav {
@@ -21,12 +24,10 @@ nav {
 
 .formulario {
     background-color: #2135A6;
-    width: 1280px;
-    height: 832px;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
-    top: 140px;
-    left: 712px;
-    position: absolute;
+    display: flex;
 }
 .ilustracao {
     position: absolute;
@@ -100,7 +101,8 @@ nav {
     width: 528px;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 5px;
+    justify-content: space-evenly;
 }
 
 .trilha {
